# flechtbox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/: FUNDING.yml
include/: audio.hpp  clock.hpp  controls.hpp  dsp.hpp  parameters.hpp  reverb.hpp  sequencer.hpp
src/: audio.cpp  audio.hpp  clock.hpp  dsp.cpp  dsp.hpp  main.cpp  sequencer.hpp  ui.cpp  ui.hpp
